--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Cozy restaurant Updates</title>
+    </head>
+    <body>
+        <h2>Version 1.0 (Release)</h2>
+        <ul>
+            <li>Prepare your own dishes</li>
+            <li>Build your own restaurant</li>
+            <li>Plant your own vegetables and fruits</li>
+            <li>Craft, build and destroy things</li>
+            <li>70 unique items</li>
+        </ul>
+    </body>
+</html>
